# unseemly

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  .unseemly_prelude  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MISTAKES.md  README.md  STANDARDS.md  core_language_basics.md  core_language_basics.txt  hll_ideas  pitch.md  rustfmt.toml  structure  syntax_bikeshed
.devcontainer/: devcontainer.json
docs/: index.html  params.json
examples/: .unseemly_prelude  build_a_language.unseemly  commentary.unseemly  worked_example.unseemly
examples/multifile/: comment_library.unseemly
examples/sdl/: example_scene.sdl
src/: alpha.rs  ast.rs  ast_walk.rs  beta.rs  cli.rs  core_extra_forms.rs  core_forms.rs  core_macro_forms.rs  core_qq_forms.rs  core_syntax_forms.rs  core_type_forms.rs  core_values.rs  earley.rs  end_to_end__tests.rs  eval.rs  expand.rs  form.rs  grammar.rs  highlighter_generation.rs  macros.rs  main.rs  name.rs  parse.rs  read.rs  subtype.rs  ty.rs  ty_compare.rs  unparse.rs  walk_mode.rs
src/examples/: .unseemly_prelude  bal_test.unseemly  build_a_language.unseemly  build_a_language.≉  comments.≉  fact.un  function_pipe.unseemly  if_macro.unseemly  if_macro.≉  simple_macro.≉  sum_list.≉  trad_let.unseemly  worked_example.unseemly
src/examples/multifile/: comment_user.comments  comment_user.unseemly
src/examples/sdl/: sdl.unseemly
src/macros/: flimsy_syntax.rs  macros.rs  mod.rs  reification_macros.rs
src/runtime/: core_values.rs  eval.rs  mod.rs  reify.rs
src/util/: assoc.rs  asterism.rs  err.rs  mbe.rs  mod.rs  sky.rs  vrep.rs
web_ide/: .gitignore  GETTING_STARTED.md  config.js  example.newlang  example.unseemly  ide.html  newlang.unseemly  unseemly_mode.js  unseemly_worker.js
