[package]
name = "unseemly"
description = "A typed macro language"
version = "0.0.0"
authors = ["Paul Stansifer <paul.stansifer@gmail.com>"]
edition = "2018"

homepage = "https://unseemly.github.io/"
repository = "https://github.com/paulstansifer/unseemly/"
readme = "README.md"
keywords = ["programming-language"]
license = "MIT"

[badges]
travis-ci = { repository = "paulstansifer/unseemly" }
appveyor = { repository = "paulstansifer/unseemly", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
lazy_static = "1.3.0"
regex = "1.1.7"
num = "0.2.0"
custom_derive = "0.1.7"
quote = "0.3"
rustyline = "4.1.0"
dirs = "2.0.1"
tap = "0.4.0"
color-backtrace = "0"
im-rc = "13.0"

[[bin]]
name = "unseemly"
path = "src/main.rs"
test = true
