[package]
name = "unseemly"
description = "A typed macro language"
version = "0.0.2"
authors = ["Paul Stansifer <paul.stansifer@gmail.com>"]
edition = "2018"

homepage = "https://unseemly.github.io/"
repository = "https://github.com/paulstansifer/unseemly/"
readme = "README.md"
keywords = ["programming-language"]
license = "MIT"

[badges]
travis-ci = { repository = "paulstansifer/unseemly" }
appveyor = { repository = "paulstansifer/unseemly", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
regex = "1.4.6"
num = "0.4.0"
custom_derive = "0.1.7"
rustyline = "8.0.0"
dirs = "3.0.2"
tap = "1.0.1"
color-backtrace = "0"
im-rc = "15.0"
codespan-reporting = "0.11.1"
ansi-to-html = "0.1.0"

[[bin]]
name = "unseemly"
path = "src/cli.rs"
# Seems a lot faster to have all the tests in the library.
test = false

[lib]
name = "libunseemly"
path = "src/main.rs"

[profile.dev]
# After minor changes, using `cargo test` to build and test is slightly *faster* at this opt level:
opt-level = 2

[profile.release]
opt-level = 3
